Fixed Page header alignment.

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1113,3 +1113,6 @@ border-radius: $radius;
 .entry-content.inline-comments.side-comments-open {
 margin-left: 220px;
 }
+h1.entry-title  {
+    margin-top: 60px;
+}
